examples/test/testpolicy1231.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1231
  namespace: namespace300
spec:
  podSelector:
    matchLabels:
      key18: value22
      key30: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value3
          key0: value41
          key14: value7
      podSelector:
        matchLabels:
          key39: value4
          key13: value49
          key23: value0
